--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Alex Misyuk Portfolio</title>
+  <title>Alex's Blog</title>
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
@@ -33,7 +33,7 @@
             <a class="nav-link" href="{% static 'resume.pdf' %}">Resume</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'allblogs' %}">Blog</a>
+            <a class="nav-link active" href="{% url 'allblogs' %}">Blog</a>
           </li>
         </ul>
       </div>
@@ -41,36 +41,23 @@
   </header>
 
   <main role="main">
+    <div class="container">
 
-    <section class="jumbotron text-center">
-      <div class="container">
-        <h1 class="jumbotron-heading">Hi, I'm Alex.</h1>
-        <p class="lead text-muted">Hey, my name is Alex Misyuk welcome to my first project on Django!!!</p>
-        <p>
-          <a href="malito:alex.misyuk2@gmail.com" class="btn btn-primary my-2">Email me</a>
-        </p>
-        <img src="{% static 'alex.jpg' %}" alt="" height="500" width="400">
-      </div>
-    </section>
 
-    <div class="album py-5 bg-light">
-      <div class="container">
+    <h1 class="text-center pt-3">Welcome to Alex's Blog</h1>
+    <br>
+    <br>
+    <h2>Latest Posts</h2>
+    <hr>
+    {% for blog in blogs.all %}
+     <a href="{% url 'detail' blog.id %}"> <h3><ins>{{ blog.title }}</ins></h3></a>
+    <p>Date public: {{ blog.pub_date_pretty }}</p>
+    <img class="img-fluid" src="{{ blog.image.url }}" height="200" width="200">
+    <p>{{ blog.summary }}</p>
 
-        <div class="row">
-          {% for job in jobs.all %}
-          <div class="col-md-4">
-            <div class="card mb-4 box-shadow">
-              <img class="card-img-top" src="{{ job.image.url }}">
-              <div class="card-body">
-                <p class="card-text">{{ job.saummary }}</p>
-              </div>
-            </div>
-          </div>
-          {% endfor %}
-        </div>
-      </div>
-    </div>
+    {% endfor %}
 
+</div>
   </main>
 
   <footer class="text-muted">
