--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -49,7 +49,7 @@
         <p>
           <a href="malito:alex.misyuk2@gmail.com" class="btn btn-primary my-2">Email me</a>
         </p>
-        <img src="{% static 'alex.jpg' %}" alt="" height="500" width="400">
+        <img src="{% static 'alex.JPG' %}" alt="" height="500" width="400">
       </div>
     </section>
 
